# statedict2pytree

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  flax_example.py  index.html  main.py  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test.eqx  test_example.py
.github/: run_tests.yml
.github/workflows/: run_tests.yml
.zed/: settings.json
client/: package-lock.json  package.json  rollup.config.mjs  tailwind.config.js
client/public/: index.html  output.css
client/src/: App.svelte
docs/: examples.md  index.md  statedict2pytree.md  utils.md
examples/: convert_resnet.py  index.html  requirements.txt  resnet.py  resnet_inference.py  test_resnet_inference.py
examples/llama/: LICENSE  llama.py  llama3_inference.py  requirements.txt  tokenizer.py
examples/resnet/: convert_resnet.py  resnet_inference.py
search/: search_index.json
statedict2pytree/: __init__.py  __main__.py  app.py  converter.py  index.html  statedict2pytree.py
statedict2pytree/static/: output.css
statedict2pytree/templates/: index.html
statedict2pytree/utils/: pydantic_models.py  utils.py  utils_pytree.py  utils_state_dict.py
tests/: resnet.py  test_2.py  test_batchnorm.py  test_bn.py  test_conv.py  test_conversion.py  test_linear.py  test_long_models.py  test_mlp.py  test_replace_node.py  test_resnet.py
torch2jax/: __init__.py  torch2jax.py
torch2jax/static/: output.css
torch2jax/templates/: index.html
utils/: index.html
