[project]
name = "statedict2pytree"
version = "1.0.0"
description = "Converts torch models into PyTrees for Equinox"
readme = "README.md"
requires-python = "~=3.10"
authors = [{ name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev" }]
dependencies = [
    "jax>=0.6.1",
    "equinox",
    "jaxlib",
    "beartype",
    "jaxtyping",
    "pydantic",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "mkdocs", "torch"]
examples = ["jaxonmodels"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
