[project]
name = "statedict2pytree"
version = "1.0.2"
description = "Converts torch models into PyTrees for Equinox"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev" }]
dependencies = [
    "jax",
    "equinox>=0.13.0",
    "jaxlib",
    "beartype",
    "jaxtyping",
    "pydantic",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "mkdocs", "torch"]
examples = ["jaxonmodels"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
